adding validator and update command
